// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons matches snapshot 1`] = `
Object {
  "Icons": Object {
    "Icon": [Function],
    "Svgs": Object {
      "add": [Function],
      "cancel": [Function],
      "check": [Function],
      "company": [Function],
      "delete": [Function],
      "edit": [Function],
      "lock": [Function],
      "menu": [Function],
      "save": [Function],
      "search": [Function],
      "site": [Function],
      "unlock": [Function],
      "user": [Function],
    },
    "names": Array [
      "add",
      "cancel",
      "check",
      "company",
      "delete",
      "edit",
      "lock",
      "menu",
      "save",
      "search",
      "site",
      "unlock",
      "user",
    ],
  },
}
`;

exports[`Icons matches snapshot 2`] = `
Object {
  "Icon": [Function],
  "Svgs": Object {
    "add": [Function],
    "cancel": [Function],
    "check": [Function],
    "company": [Function],
    "delete": [Function],
    "edit": [Function],
    "lock": [Function],
    "menu": [Function],
    "save": [Function],
    "search": [Function],
    "site": [Function],
    "unlock": [Function],
    "user": [Function],
  },
  "names": Array [
    "add",
    "cancel",
    "check",
    "company",
    "delete",
    "edit",
    "lock",
    "menu",
    "save",
    "search",
    "site",
    "unlock",
    "user",
  ],
}
`;
